# gh-daily

./: .env.example  .gitignore  README.md  publish.sh  pyproject.toml
.github/workflows/: daily.yml
data/: history-finance.json  history-tech.json  snapshots.db
docs/: index.html  today.html
docs/assets/: style.css
docs/finance/: index.html  today.html
docs/finance/archive/: 2026-06-24.html  2026-06-25.html  2026-06-26.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-02.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-06.html  2026-07-07.html  2026-07-08.html  2026-07-09.html  2026-07-10.html  2026-07-11.html  2026-07-12.html  2026-07-13.html  2026-07-14.html  2026-07-15.html  2026-07-16.html  2026-07-17.html  2026-07-18.html  2026-07-19.html  2026-07-20.html  2026-07-21.html  2026-07-22.html  2026-07-23.html  2026-07-24.html
docs/superpowers/specs/: 2026-05-11-github-daily-design.md
docs/tech/: index.html  today.html
docs/tech/archive/: 2026-06-23.html  2026-06-24.html  2026-06-25.html  2026-06-26.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-02.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-06.html  2026-07-07.html  2026-07-08.html  2026-07-09.html  2026-07-10.html  2026-07-11.html  2026-07-12.html  2026-07-13.html  2026-07-14.html  2026-07-15.html  (+9 more)
src/: config.py  fetch.py  history.py  illustrate.py  main.py  models.py  render.py  select.py  snapshot.py  summarize.py  wechat.py
src/sources/: __init__.py  arxiv.py  base.py  github.py  hackernews.py  huggingface.py  rss.py
