[project]
name = "gh-daily"
version = "0.1.0"
description = "Semi-auto GitHub trending digest publisher for WeChat 公众号"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "markdown-it-py>=3.0",
    "premailer>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gh-daily = "src.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
